--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ body {
     background-color: grey;
     font-family: "Orbitron", sans-serif;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.loading-menu {
+    text-align: center
 }
 #hud {
     display: flex;
