--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@
 body,
 canvas {
     margin: 0;
+    max-width: 100vw;
 }
 body {
-    background-color: grey;
+    background-color: black;
     font-family: "Orbitron", sans-serif;
     color: #fff;
     display: flex;
@@ -17,15 +18,23 @@ body {
     align-items: center;
     height: 100vh;
 }
+canvas {
+    aspect-ratio: 16/9;
+}
 .loading-menu {
     text-align: center
 }
+.game-wrapper {
+    position: relative;
+    max-width: 100vw;
+}
 #hud {
     display: flex;
-    position: fixed;
+    position: absolute;
     box-sizing: border-box;
-    width: 100vw;
-    z-index: 100;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
     padding: 20px;
 }
 #heartsWrapper {
