--- a/style.css
+++ b/style.css
@@ -2,14 +2,21 @@
     font-family: "Orbitron";
     font-display: swap;
     src: local("Orbitron"),
-        url("assets/fonts/Orbitron-VariableFont_wght.ttf") format("truetype");
-}
-body,
-canvas {
+      url("assets/fonts/Orbitron-VariableFont_wght.ttf") format("truetype");
+  }
+  @font-face {
+    font-family: "Rocket Rinder";
+    font-display: swap;
+    src: local("Rocket Rinder"),
+      url("/assets/fonts/Rocket-Rinder.otf") format("opentype");
+  }
+  
+  body,
+  canvas {
     margin: 0;
     max-width: 100vw;
-}
-body {
+  }
+  body {
     background-color: black;
     font-family: "Orbitron", sans-serif;
     color: #fff;
@@ -17,20 +24,20 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-}
-canvas {
+  }
+  canvas {
     aspect-ratio: 4/3;
-}
-.loading-menu {
-    text-align: center
-}
-.game-wrapper {
+  }
+  .loading-menu {
+    text-align: center;
+  }
+  .game-wrapper {
     position: relative;
     max-width: 100vw;
     opacity: 1;
     transition: opacity 5s linear;
-}
-#hud {
+  }
+  #hud {
     display: flex;
     position: absolute;
     box-sizing: border-box;
@@ -38,32 +45,32 @@ canvas {
     width: 100%;
     z-index: 1;
     padding: 20px;
-}
-#heartsWrapper {
+  }
+  #heartsWrapper {
     display: flex;
     gap: 12px;
     align-items: center;
-}
-.heart {
+  }
+  .heart {
     background-image: url("assets/hud/PVPlein.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     width: 40px;
     height: 40px;
-}
-.heart.lost {
+  }
+  .heart.lost {
     background-image: url("assets/hud/PVvide.png");
-}
-#timer {
+  }
+  #timer {
     margin: 0 0 0 auto;
     padding: 0;
     font-size: 32px;
     font-weight: 600;
     color: #fff;
     text-shadow: 1px 1px 4px rgb(150, 22, 255);
-}
-#credits {
+  }
+  #credits {
     display: flex;
     flex-direction: column;
     position: fixed;
@@ -74,21 +81,90 @@ canvas {
     align-items: center;
     gap: 24px;
     text-align: center;
-}
-#credits h1 {
+  }
+  #credits h1 {
     font-size: 52px;
     text-shadow: 2px 2px 4px rgb(255, 151, 241);
-}
-#credits .wrapper {
+  }
+  #credits .wrapper {
     margin-bottom: 40px;
-}
-#credits h2 {
+  }
+  #credits h2 {
     font-size: 40px;
     margin-top: 0;
     text-shadow: 1px 1px 4px rgb(215, 166, 255);
-}
-#credits p {
+  }
+  #credits p {
     font-size: 28px;
     margin: 8px;
     text-shadow: 1px 1px 4px rgb(165, 242, 255);
-}
+  }
+  
+  #gameOverWrapper {
+    box-sizing: border-box;
+    position: absolute;
+    top: 40vh;
+    left: 20vw;
+    z-index: 200;
+    display: flex;
+    flex-direction: column;
+  
+    align-items: center;
+  }
+  
+  #gameOverText,
+  #gameOverTextShadow {
+    margin: 0;
+    padding: 0;
+    font-family: "Rocket Rinder";
+    font-weight: 700;
+    font-size: 80px;
+  }
+  #gameOverText {
+    color: transparent;
+    background-image: linear-gradient(to bottom, #b41484, #ffa5ac);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-stroke: #8bfbff 0.5px;
+  }
+  
+  #gameOverTextShadow {
+    position: absolute;
+    z-index: -1;
+    text-shadow: -1px -1px 24px #5affe9;
+  }
+  
+  #gameOverWrapper .buttonWrapper {
+    box-sizing: border-box;
+    display: flex;
+    width: 100%;
+  
+    padding: 0 32px;
+    margin-top: 64px;
+  }
+  
+  #gameOverWrapper button {
+    border: solid #fff 2px;
+    border-radius: 8px;
+    padding: 8px 16px;
+    outline: none;
+    background-color: #b41484;
+  
+    color: #fff;
+    font-family: "Orbitron";
+    font-size: 32px;
+  }
+  #gameOverWrapper button:hover {
+    cursor: pointer;
+    box-shadow: -1px -1px 24px #5affe9;
+    text-shadow: -1px -1px 24px #5affe9;
+    color: #ebfffc;
+    border: solid #5affe9 2px;
+  }
+  #retryButton {
+    margin: 0 auto 0 0;
+  }
+  #quitButton {
+    margin: 0 0 0 auto;
+  }
+  
