--- a/style.css
+++ b/style.css
@@ -127,6 +127,8 @@ canvas {
   display: flex;
   flex-direction: column;
   position: fixed;
+  bottom: 0%;
+  transform: translateY(100%);
   box-sizing: border-box;
   z-index: 200;
   width: 100vw;
@@ -156,7 +158,18 @@ canvas {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  opacity: 0;
+  animation: fadeIn 1s forwards;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 #gameOverText,
 #gameOverTextShadow {
@@ -202,8 +215,11 @@ canvas {
   color: #ebfffc;
   border: solid #5affe9 2px;
 }
-#retryButton {
+#retryButton:not(.replay-btn) {
   margin: 0 auto 0 0;
+}
+.replay-btn {
+  margin-top: 1rem;
 }
 #quitButton {
   margin: 0 0 0 auto;
