--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ canvas {
   text-shadow: 1px 1px 4px rgb(165, 242, 255);
 }
 #gameOverWrapper {
+  position: relative;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -185,9 +186,11 @@ canvas {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-stroke: #8bfbff 2px;
+  position: relative;
 }
 #gameOverTextShadow {
   position: absolute;
+  top: 0;
   z-index: -1;
   text-shadow: -1px -1px 24px #5affe9;
 }
